version 2.01 ()
1. Add missing config.m4 and Makefile.in for static linking
	Thank Mark Drago for notice
2. FCGIWrapper disallowed in .htaccess
	Thank Balinares for patch

version 2.0 ( Oct 29th 2006 )
1. Support FastCGI Authorizer protocols now.
2. Add apxs compile instruction in INSTALL.txt.
	Thank Hans Christian Saustrup, hc at saustrup.net for the suggestion.
3. Bug fix. (Win32 only) PHP script can not create socket on Win32.
	Thank bbscool at zjip.com for the bug report and the help.
4. GREAT patchs from Robert L Mathews, rob at tigertech.com
	Fix compile warnings
	Adds a MaxRequestsPerProcess parameter that allows mod_fcgid to exit after handling a certain number of requests
	Close socket before fork 
	avoid the 1-second sleep the first time a process is spawned
5. Print warning log while read data error from FastCGI process.
6. Apply patch from Scott Lamb, Fix mod_fcgid 1.10 warnings on x86_64

version 1.10 ( Jul 3rd 2006 )
1. Use poll() instead of select() in UNIX. "It becomes problematic on apache2 with
large number of logfiles. Apache2 calls poll() (when OS supports it), and in that
case it doesn't need to be recompiled with larger FD_SETSIZE. select() is
still limited to FD_SETSIZE." 
	Thank Piotr Gackiewicz gacek at intertele.pl for the patch.
2. Bug fix: "Some requests fail with HTTP 500 and no errorlog entry is generated"
	Thank Piotr Gackiewicz gacek at intertele.pl for the patch.
3. Use anonymouse share memeory to make OS X happy.
	Thank andkjar at obtech.net for the patch.
4. Add config.m4, mod_fcgid now can be static linked in httpd(See INSTALL.txt)

version 1.09 ( Apr 25th 2006 )
1. Add configuration DefaultMinClassProcessCount(default 3). Idle fastcgi will not be killed if their count 
	less than DefaultMinClassProcessCount.  
	(Thank Finn Smith, finn at timeghost.net for suggestion)
2. Add  configuration PHP_Fix_Pathinfo_Enable(default 0). If you are using PHP and set cgi.fix_pathinfo=1 in